# api-vps

./: .gitignore  pyproject.toml
api_vps/: app.py
api_vps/controllers/: __init__.py  books.py
api_vps/routers/: __init__.py  books.py
api_vps/schemas/: __init__.py  books.py
api_vps/utils/: http_requester.py
static/: books.json
tests/: conftest.py  test_books_controller.py  test_books_route.py  test_health_check.py  test_http_requester.py
